loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:12: error: Unit does not take parameters
    } else() {
             ^