loopdowhile.Poucet1.scala.code

do{
  var b = 0
  for(i<- 1 to 5){
    avance()
    if(estSurBiscuit()){
      b = b + 1  
    }
    
    if(b>=3){
      gauche()
    } else() {
      droite()
    }
    
  }
} while(!sortieTrouvee())